--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,7 @@ form, label, legend, table, caption, tbody,
 tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video {
+section, summary, time, mark, audio, video,{
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -29,12 +29,9 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
 
-<EMBED src="music/1.mp3" autostart="true" loop="true" width="80" height="20">
-
 body {
 	line-height: 1;
 }
-
 ol, ul {
 	list-style: none;
 }
